Accordion width fix on mobile

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -64,12 +64,14 @@ body {
   color: #444;
   cursor: pointer;
   padding: 18px;
-  width: 100%;
+  width: 90%; 
+  margin-left: 20px;
   border: none;
   text-align: left;
   outline: none;
   font-size: 15px;
   transition: 0.4s;
+  justify-content: center; /* Center text horizontally */
 }
 
 .active, .accordion:hover {
